--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "^13.2.4",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "node-mocks-http": "^1.16.2",
     "typescript": "^5.0.3"
   }
 }
